src/main/java/mpei/bkm/parsing/lq/parsers/LQParser.java
package mpei.bkm.parsing.lq.parsers;// Generated from C:/plugin/protege/bkmapi-parsing/grammar\LQ.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LQParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, QueryHeadSign=7, QueryBodySign=8, 
		Int=9, Float=10, QuotedString=11, SUM=12, AVG=13, MIN=14, MAX=15, EQ=16, 
		NOTEQ=17, LT=18, LE=19, GT=20, GE=21, LIKE=22, Name=23, Space=24;
	public static final int
		RULE_query = 0, RULE_goals = 1, RULE_goal = 2, RULE_aggregateGoal = 3, 
		RULE_conditions = 4, RULE_condition = 5, RULE_inClass = 6, RULE_attributeConditions = 7, 
		RULE_attributeCondition = 8, RULE_linkCondition = 9, RULE_functionalLinkCondition = 10, 
		RULE_variableOperatorCondition = 11, RULE_variableAttrSelector = 12, RULE_attributeSelector = 13, 
		RULE_variableName = 14, RULE_className = 15, RULE_linkName = 16, RULE_attributeName = 17, 
		RULE_aggregateFunction = 18, RULE_binaryOperator = 19, RULE_value = 20, 
		RULE_number = 21;
	public static final String[] ruleNames = {
		"query", "goals", "goal", "aggregateGoal", "conditions", "condition", 
		"inClass", "attributeConditions", "attributeCondition", "linkCondition", 
		"functionalLinkCondition", "variableOperatorCondition", "variableAttrSelector", 
		"attributeSelector", "variableName", "className", "linkName", "attributeName", 
		"aggregateFunction", "binaryOperator", "value", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'('", "')'", "';'", "'IN'", "'.'", "'?'", "'-'", null, null, 
		null, "'SUM'", "'AVG'", "'MIN'", "'MAX'", "'='", "'=/='", "'<'", "'<='", 
		"'>'", "'>='", "'LIKE'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "QueryHeadSign", "QueryBodySign", 
		"Int", "Float", "QuotedString", "SUM", "AVG", "MIN", "MAX", "EQ", "NOTEQ", 
		"LT", "LE", "GT", "GE", "LIKE", "Name", "Space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LQ.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LQParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public TerminalNode QueryHeadSign() { return getToken(LQParser.QueryHeadSign, 0); }
		public GoalsContext goals() {
			return getRuleContext(GoalsContext.class,0);
		}
		public TerminalNode QueryBodySign() { return getToken(LQParser.QueryBodySign, 0); }
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LQParser.EOF, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44); 
			match(QueryHeadSign);
			setState(45); 
			goals();
			setState(46); 
			match(QueryBodySign);
			setState(47); 
			conditions();
			setState(48); 
			match(Recognizer.EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalsContext extends ParserRuleContext {
		public List<GoalContext> goal() {
			return getRuleContexts(GoalContext.class);
		}
		public GoalContext goal(int i) {
			return getRuleContext(GoalContext.class,i);
		}
		public AggregateGoalContext aggregateGoal() {
			return getRuleContext(AggregateGoalContext.class,0);
		}
		public GoalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterGoals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitGoals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitGoals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalsContext goals() throws RecognitionException {
		GoalsContext _localctx = new GoalsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_goals);
		int _la;
		try {
			setState(59);
			switch (_input.LA(1)) {
			case Name:
				enterOuterAlt(_localctx, 1);
				{
				setState(50); 
				goal();
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(51); 
					match(T__0);
					setState(52); 
					goal();
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case SUM:
			case AVG:
			case MIN:
			case MAX:
				enterOuterAlt(_localctx, 2);
				{
				setState(58); 
				aggregateGoal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalContext extends ParserRuleContext {
		public VariableAttrSelectorContext variableAttrSelector() {
			return getRuleContext(VariableAttrSelectorContext.class,0);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_goal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			variableAttrSelector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregateGoalContext extends ParserRuleContext {
		public AggregateFunctionContext aggregateFunction() {
			return getRuleContext(AggregateFunctionContext.class,0);
		}
		public AttributeSelectorContext attributeSelector() {
			return getRuleContext(AttributeSelectorContext.class,0);
		}
		public AggregateGoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregateGoal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterAggregateGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitAggregateGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitAggregateGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AggregateGoalContext aggregateGoal() throws RecognitionException {
		AggregateGoalContext _localctx = new AggregateGoalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_aggregateGoal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(63); 
			aggregateFunction();
			setState(64); 
			match(T__1);
			setState(65); 
			attributeSelector();
			setState(66); 
			match(T__2);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsContext extends ParserRuleContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public ConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitConditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitConditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionsContext conditions() throws RecognitionException {
		ConditionsContext _localctx = new ConditionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conditions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); 
			condition();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(69); 
				match(T__3);
				setState(70); 
				condition();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public InClassContext inClass() {
			return getRuleContext(InClassContext.class,0);
		}
		public VariableOperatorConditionContext variableOperatorCondition() {
			return getRuleContext(VariableOperatorConditionContext.class,0);
		}
		public LinkConditionContext linkCondition() {
			return getRuleContext(LinkConditionContext.class,0);
		}
		public FunctionalLinkConditionContext functionalLinkCondition() {
			return getRuleContext(FunctionalLinkConditionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condition);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76); 
				inClass();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77); 
				variableOperatorCondition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78); 
				linkCondition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79); 
				functionalLinkCondition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InClassContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public AttributeConditionsContext attributeConditions() {
			return getRuleContext(AttributeConditionsContext.class,0);
		}
		public InClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterInClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitInClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitInClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InClassContext inClass() throws RecognitionException {
		InClassContext _localctx = new InClassContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); 
			variableName();
			setState(83); 
			match(T__4);
			setState(84); 
			className();
			setState(86);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(85); 
				attributeConditions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeConditionsContext extends ParserRuleContext {
		public List<AttributeConditionContext> attributeCondition() {
			return getRuleContexts(AttributeConditionContext.class);
		}
		public AttributeConditionContext attributeCondition(int i) {
			return getRuleContext(AttributeConditionContext.class,i);
		}
		public AttributeConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeConditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterAttributeConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitAttributeConditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitAttributeConditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeConditionsContext attributeConditions() throws RecognitionException {
		AttributeConditionsContext _localctx = new AttributeConditionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attributeConditions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			match(T__1);
			setState(89); 
			attributeCondition();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(90); 
				match(T__3);
				setState(91); 
				attributeCondition();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97); 
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeConditionContext extends ParserRuleContext {
		public AttributeSelectorContext attributeSelector() {
			return getRuleContext(AttributeSelectorContext.class,0);
		}
		public BinaryOperatorContext binaryOperator() {
			return getRuleContext(BinaryOperatorContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableAttrSelectorContext variableAttrSelector() {
			return getRuleContext(VariableAttrSelectorContext.class,0);
		}
		public AttributeConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterAttributeCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitAttributeCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitAttributeCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeConditionContext attributeCondition() throws RecognitionException {
		AttributeConditionContext _localctx = new AttributeConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attributeCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); 
			attributeSelector();
			setState(100); 
			binaryOperator();
			setState(103);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case QuotedString:
				{
				setState(101); 
				value();
				}
				break;
			case Name:
				{
				setState(102); 
				variableAttrSelector();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkConditionContext extends ParserRuleContext {
		public List<VariableNameContext> variableName() {
			return getRuleContexts(VariableNameContext.class);
		}
		public VariableNameContext variableName(int i) {
			return getRuleContext(VariableNameContext.class,i);
		}
		public LinkNameContext linkName() {
			return getRuleContext(LinkNameContext.class,0);
		}
		public LinkConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linkCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterLinkCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitLinkCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitLinkCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkConditionContext linkCondition() throws RecognitionException {
		LinkConditionContext _localctx = new LinkConditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_linkCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			match(T__1);
			setState(106); 
			variableName();
			setState(107); 
			linkName();
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(108); 
				variableName();
				}
				break;
			}
			setState(111); 
			variableName();
			setState(112); 
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionalLinkConditionContext extends ParserRuleContext {
		public LinkNameContext linkName() {
			return getRuleContext(LinkNameContext.class,0);
		}
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public AttributeConditionContext attributeCondition() {
			return getRuleContext(AttributeConditionContext.class,0);
		}
		public FunctionalLinkConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionalLinkCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterFunctionalLinkCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitFunctionalLinkCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitFunctionalLinkCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionalLinkConditionContext functionalLinkCondition() throws RecognitionException {
		FunctionalLinkConditionContext _localctx = new FunctionalLinkConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_functionalLinkCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); 
			linkName();
			setState(115); 
			match(T__1);
			setState(116); 
			variableName();
			setState(117); 
			match(T__2);
			setState(118); 
			match(T__5);
			setState(119); 
			attributeCondition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableOperatorConditionContext extends ParserRuleContext {
		public List<VariableAttrSelectorContext> variableAttrSelector() {
			return getRuleContexts(VariableAttrSelectorContext.class);
		}
		public VariableAttrSelectorContext variableAttrSelector(int i) {
			return getRuleContext(VariableAttrSelectorContext.class,i);
		}
		public BinaryOperatorContext binaryOperator() {
			return getRuleContext(BinaryOperatorContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableOperatorConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableOperatorCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterVariableOperatorCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitVariableOperatorCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitVariableOperatorCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableOperatorConditionContext variableOperatorCondition() throws RecognitionException {
		VariableOperatorConditionContext _localctx = new VariableOperatorConditionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variableOperatorCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			variableAttrSelector();
			setState(122); 
			binaryOperator();
			setState(125);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case QuotedString:
				{
				setState(123); 
				value();
				}
				break;
			case Name:
				{
				setState(124); 
				variableAttrSelector();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableAttrSelectorContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public List<AttributeNameContext> attributeName() {
			return getRuleContexts(AttributeNameContext.class);
		}
		public AttributeNameContext attributeName(int i) {
			return getRuleContext(AttributeNameContext.class,i);
		}
		public VariableAttrSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableAttrSelector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterVariableAttrSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitVariableAttrSelector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitVariableAttrSelector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableAttrSelectorContext variableAttrSelector() throws RecognitionException {
		VariableAttrSelectorContext _localctx = new VariableAttrSelectorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_variableAttrSelector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); 
			variableName();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(128); 
				match(T__5);
				setState(129); 
				attributeName();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeSelectorContext extends ParserRuleContext {
		public List<AttributeNameContext> attributeName() {
			return getRuleContexts(AttributeNameContext.class);
		}
		public AttributeNameContext attributeName(int i) {
			return getRuleContext(AttributeNameContext.class,i);
		}
		public AttributeSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeSelector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterAttributeSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitAttributeSelector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitAttributeSelector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeSelectorContext attributeSelector() throws RecognitionException {
		AttributeSelectorContext _localctx = new AttributeSelectorContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_attributeSelector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); 
			attributeName();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(136); 
				match(T__5);
				setState(137); 
				attributeName();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableNameContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(LQParser.Name, 0); }
		public VariableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).enterVariableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LQListener ) ((LQListener)listener).exitVariableName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LQVisitor ) return ((LQVisitor<? extends T>)visitor).visitVariableName(this);
			else return visitor.visitChildren(this);
		}
	}
